jpackage --runtime-image fails on mac when using JDK11 based runtime.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 16
    • Affects Version/s: 16
    • Component/s: tools
    • b13
    • x86_64
    • os_x
    • Verified

      You cannot use --runtime-image with JDK11 based runtime on Mac.
      This worked in JDK14 and is broken in JDK15 and JDK16.
      The jpackage command will run, but the resulting applauncher will look for the jli lib in the wrong place (for JDK11)
      This library was moved from '<runtime>/lib/jli/libjli.dylib' in JDK11 to to '<runtime>/lib/libjli.dylib' in jdk12.
      After the refactoring of the native code we are no longer looking in both places.
      There is no such problem on Windows.

            Assignee:
            Andy Herrick (Inactive)
            Reporter:
            Andy Herrick (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: