8251988: jpackage --runtime-image fails on mac when using JDK11 based runtime

Reviewed-by: asemenyuk, almatvee, prr